# tasycl

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
m4/: ax_cxx_compile_stdcxx.m4  sycl.m4
src/c/: Initialization.cpp  Queues.cpp  Requests.cpp
src/common/: ALPI.hpp  Allocator.hpp  Environment.cpp  Environment.hpp  QueuePool.hpp  RequestManager.hpp  Symbol.hpp  TaskingModel.cpp  TaskingModel.hpp  TaskingModelAPI.hpp
src/common/util/: EnvironmentVariable.hpp  ErrorHandler.hpp  LockFreeQueue.hpp  SpinLock.hpp  Utils.hpp
src/include/: TASYCL.hpp
